# kubeview

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dockerfile  README.md  cliff.toml  clippy.toml  deny.toml  taplo.toml
.github/: copilot-instructions.md
.github/workflows/: build_then_release.yml  check_and_test.yml  kind_integration.yml
scripts/: check_kubernetes_readonly_text.py
src/: cli.rs  error.rs  kubernetes.rs  lib.rs  main.rs  models.rs  observability.rs  server.rs  tools.rs
src/kubernetes/: tests.rs
src/observability/: batch.rs  events.rs  rollout.rs  service.rs
src/tools/: tests.rs
tests/: kind_integration.rs
tests/kind_integration/: assertions.rs  cluster.rs  mcp.rs
tests/kind_integration/fixtures/: prod_smoke.yaml.tmpl
