[package]
name = "kubeview"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Read-only Kubernetes MCP server for inspecting clusters"
repository = "https://github.com/ma233/kubeview"
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
clap = { version = "4.5.51", features = ["derive", "env"] }
k8s-openapi = { version = "0.27.1", features = ["latest"] }
kube = { version = "3.1.0", features = ["client", "config", "derive", "http-proxy", "rustls-tls"] }
rmcp = { version = "1.6.0", features = ["client", "transport-streamable-http-server"] }
schemars = "1.0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "process", "rt-multi-thread", "signal"] }
tokio-util = "0.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
